# cirrhosis-detection-mlops

./: .gitignore  Makefile  README.md  config.yaml  dockerfile  dvc.yaml  main.py  pyproject.toml  requirements.txt  setup.py  test.py
app/: app-main.py  app.py  ui.py
data/raw/: liver_cirrhosis.csv.dvc
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore
notebooks/: experiment.ipynb
src/: data.py  evaluate.py  features.py  model.py
